--- a/main/main.css
+++ b/main/main.css
@@ -1,5 +1,5 @@
 #intro {
-    background-image: url("img/Education - 35448.gif");
+    background-image: url("img/banner-move-2.gif");
     height: 100vh;
   }
 
