--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 #intro {
-    background-image: url("img/banner-move-2.gif");
+    background-image: url("../img/banner-move-2.gif");
     height: 100vh;
   }
 
