--- a/assets/css/memorama.css
+++ b/assets/css/memorama.css
@@ -284,3 +284,42 @@ button {
   transition-delay: 0.1s;
   transition-duration: 0s;
 }
+
+
+/* boton style */
+.button {
+  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+  text-align:center;
+  text-decoration: none;
+  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  display:inline-block;
+  color: #FFF !important;
+  background: #7F8C8D;
+  padding: 7px 20px;
+  white-space: nowrap;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 100px;
+  margin: 10px 5px;
+  -webkit-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.green{
+background: #2ECC71;
+box-shadow: 0px 5px 0px 0px #27AE60;
+}
+
+.green:hover{
+background: #32db78;
+}
+
+.green:active{
+box-shadow: 0px 2px 0px 0px #27AE60;
+}
+
+
+
