--- a/assets/css/crossword.css
+++ b/assets/css/crossword.css
@@ -1,3 +1,7 @@
+body {
+  background: linear-gradient(to left, #6c41ef, #345);
+}
+
 .container {
     margin-top: 3vh;
   }
@@ -27,7 +31,7 @@
     background: #ff9f55;
   }
   
-  td.selected {
+  td.selected, p {
     background: lightblue;
   }
   
@@ -67,10 +71,10 @@
     margin-top: 10px;
   }
 
-body{
+/* body{
   background-color: black;
 }
-
+ */
 /* boton style */
 .button {
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
