--- a/assets/css/crossword.css
+++ b/assets/css/crossword.css
@@ -1,112 +1,1 @@
-body {
-  background: linear-gradient(to left, #6c41ef, #345);
-}
-
-.container {
-    margin-top: 3vh;
-  }
-  
-  .table-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  table {
-    border-collapse: collapse;
-    font-size: 18px;
-  }
-  
-  td {
-    width: 36px;
-    height: 36px;
-    border: 1px solid black;
-    text-align: center;
-    position: relative;
-    text-transform: uppercase;
-    font-family: arial;
-  }
-  
-  td.empty {
-    background: #ff9f55;
-  }
-  
-  td.selected, p {
-    background: lightblue;
-  }
-  
-  td.start {
-    cursor: pointer;  
-  }
-  
-  td.start label {
-    position: absolute;
-    top: 0;
-    left: 2px;
-    text-align: left;
-    font-size: 10px;
-  }
-  
-  td.start:hover {
-    background: #eee;
-  }
-  
-  td.start.selected:hover {
-    background: #ddf;
-  }
-  
-  .mensaje {
-    position: absolute;
-    color: white;
-    left: 25vw;
-    text-align: center;
-    border-radius: 8px;
-    padding: 10px;
-    width: 50vw;
-    z-index: 1000;
-    background: rgba(0, 0, 255, 0.9)
-  }
-  
-  .mensaje button {
-    margin-top: 10px;
-  }
-
-/* body{
-  background-color: black;
-}
- */
-/* boton style */
-.button {
-  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
-  text-align:center;
-  text-decoration: none;
-  font-family: 'Helvetica Neue', Helvetica, sans-serif;
-  display:inline-block;
-  color: #FFF !important;
-  background: #7F8C8D;
-  padding: 7px 20px;
-  white-space: nowrap;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 100px;
-  margin: 10px 5px;
-  -webkit-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  text-decoration: none !important;
-}
-
-.green{
-background: #2ECC71;
-box-shadow: 0px 5px 0px 0px #27AE60;
-}
-
-.green:hover{
-background: #32db78;
-}
-
-.green:active{
-box-shadow: 0px 2px 0px 0px #27AE60;
-}
+body{background:linear-gradient(to left,#6c41ef,#345)}.container{margin-top:3vh}.table-container{display:flex;flex-direction:column;align-items:center}table{border-collapse:collapse;font-size:18px}td{width:36px;height:36px;border:1px solid #000;text-align:center;position:relative;text-transform:uppercase;font-family:arial}td.empty{background:#ff9f55}p,td.selected{background:#add8e6}td.start{cursor:pointer}td.start label{position:absolute;top:0;left:2px;text-align:left;font-size:10px}td.start:hover{background:#eee}td.start.selected:hover{background:#ddf}.mensaje{position:absolute;color:#fff;left:25vw;text-align:center;border-radius:8px;padding:10px;width:50vw;z-index:1000;background:rgba(0,0,255,.9)}.mensaje button{margin-top:10px}.button{text-shadow:0 1px rgba(0,0,0,.2);text-align:center;text-decoration:none;font-family:'Helvetica Neue',Helvetica,sans-serif;display:inline-block;color:#fff!important;background:#7f8c8d;padding:7px 20px;white-space:nowrap;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:100px;margin:10px 5px;-webkit-transition:all .2s ease-in-out;-ms-transition:all .2s ease-in-out;-moz-transition:all .2s ease-in-out;-o-transition:all .2s ease-in-out;transition:all .2s ease-in-out;text-decoration:none!important}.green{background:#2ecc71;box-shadow:0 5px 0 0 #27ae60}.green:hover{background:#32db78}.green:active{box-shadow:0 2px 0 0 #27ae60}
