--- a/assets/css/tictac.css
+++ b/assets/css/tictac.css
@@ -1,183 +1,1 @@
-body {
-    font-family: Arial, Helvetica, sans-serif; 
-    color: rgb(235, 235, 235);
-    background: linear-gradient(to left, #6c41ef, #345);
-  }
-  
-  .wrapper {
-    border: 1px dashed transparent;
-    position:relative;
-    height: 700px;
-    width: auto;
-  }
-  
-  .gameTitle {
-    position:relative;
-    border: 1px dotted transparent;
-    height: 60px;
-    width:400px;
-    font-size: 60px;
-    text-align: center;
-    margin: 30px auto 15px auto;
-  }
-  
-  .message {
-    position:relative;
-    border: 1px dotted transparent;
-    height: 60px;
-    width:400px;
-    font-size: 22px;
-    text-align: center;
-    margin: 30px auto 5px auto;
-  }
-  
-  .game-board {
-    position:relative;
-    height: 400px;
-    width:400px;
-    background-color: LightGray;
-    margin: 20px auto 0 auto;
-    border-radius: 5%;
-  }
-  
-  .play-square {
-    color:#3e3535;
-    position: absolute;
-    border: 1px dotted transparent;
-    height: 128px;
-    width: 126px;
-    font-size: 150px;
-    text-align: center;
-    line-height: .88em;
-    cursor: pointer;
-  }
-  
-  .game-grid-line {
-    position: absolute;
-    background-color: DimGray;
-  }
-  
-  .vert-line {
-    height: 390px;
-    width: 10px;
-  }
-  .horiz-line {
-    width: 390px;
-    height: 10px;
-  }
-  
-  #left-vert {
-    top: 5px;
-    left:32%;
-  }
-  #right-vert {
-    top: 5px;
-    left:66%;
-  }
-  #top-horiz {
-    top: 32%;
-    left: 5px;
-  }
-  #bottom-horiz {
-    top: 66%;
-    left:5px;
-  }
-  
-  #sqTopLeft {
-    left: 0;
-    top: 0;
-  }
-  #sqTopMiddle {
-    left: 34%;
-    top: 0;
-  }
-  #sqTopRight {
-    left: 68%;
-    top: 0;
-  }
-  #sqMiddleLeft {
-    left: 0;
-    top: 34%;
-  }
-  #sqMiddleMiddle {
-    left: 34%;
-    top: 34%;
-  }
-  #sqMiddleRight {
-    left: 68%;
-    top: 34%;
-  }
-  #sqBottomLeft {
-    left: 0;
-    top: 68%;
-  }
-  #sqBottomMiddle {
-    left: 34%;
-    top: 68%;
-  }
-  #sqBottomRight {
-    left: 68%;
-    top: 68%;
-  }
-  
-  .resetButton {
-    position:relative;
-    height: 40px;
-    width:135px;
-    background-color:DarkGreen;
-    border: 1px solid DarkGray;
-    border-radius: 15px;
-    font-size: 20px;
-    text-align: center;
-    margin: 0 auto 15px auto;
-    padding: 15px 0 0 0;
-    color: white;
-    cursor: pointer;
-  }
-  
-  .hide {
-    display: none;
-  }
-  
-  .align-right {
-    text-align:right;
-  }
-  
-  .align-left {
-    text-align:left;
-  }
-
-  /* boton style */
-.button {
-  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
-  text-align:center;
-  text-decoration: none;
-  font-family: 'Helvetica Neue', Helvetica, sans-serif;
-  display:inline-block;
-  color: #FFF !important;
-  background: #7F8C8D;
-  padding: 7px 20px;
-  white-space: nowrap;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 100px;
-  margin: 10px 5px;
-  -webkit-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-
-.green{
-background: #2ECC71;
-box-shadow: 0px 5px 0px 0px #27AE60;
-}
-
-.green:hover{
-background: #32db78;
-}
-
-.green:active{
-box-shadow: 0px 2px 0px 0px #27AE60;
-}
+body{font-family:Arial,Helvetica,sans-serif;color:#ebebeb;background:linear-gradient(to left,#6c41ef,#345)}.wrapper{border:1px dashed transparent;position:relative;height:700px;width:auto}.gameTitle{position:relative;border:1px dotted transparent;height:60px;width:400px;font-size:60px;text-align:center;margin:30px auto 15px auto}.message{position:relative;border:1px dotted transparent;height:60px;width:400px;font-size:22px;text-align:center;margin:30px auto 5px auto}.game-board{position:relative;height:400px;width:400px;background-color:#d3d3d3;margin:20px auto 0 auto;border-radius:5%}.play-square{color:#3e3535;position:absolute;border:1px dotted transparent;height:128px;width:126px;font-size:150px;text-align:center;line-height:.88em;cursor:pointer}.game-grid-line{position:absolute;background-color:#696969}.vert-line{height:390px;width:10px}.horiz-line{width:390px;height:10px}#left-vert{top:5px;left:32%}#right-vert{top:5px;left:66%}#top-horiz{top:32%;left:5px}#bottom-horiz{top:66%;left:5px}#sqTopLeft{left:0;top:0}#sqTopMiddle{left:34%;top:0}#sqTopRight{left:68%;top:0}#sqMiddleLeft{left:0;top:34%}#sqMiddleMiddle{left:34%;top:34%}#sqMiddleRight{left:68%;top:34%}#sqBottomLeft{left:0;top:68%}#sqBottomMiddle{left:34%;top:68%}#sqBottomRight{left:68%;top:68%}.resetButton{position:relative;height:40px;width:135px;background-color:#006400;border:1px solid #a9a9a9;border-radius:15px;font-size:20px;text-align:center;margin:0 auto 15px auto;padding:15px 0 0 0;color:#fff;cursor:pointer}.hide{display:none}.align-right{text-align:right}.align-left{text-align:left}.button{text-shadow:0 1px rgba(0,0,0,.2);text-align:center;text-decoration:none;font-family:'Helvetica Neue',Helvetica,sans-serif;display:inline-block;color:#fff!important;background:#7f8c8d;padding:7px 20px;white-space:nowrap;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:100px;margin:10px 5px;-webkit-transition:all .2s ease-in-out;-ms-transition:all .2s ease-in-out;-moz-transition:all .2s ease-in-out;-o-transition:all .2s ease-in-out;transition:all .2s ease-in-out}.green{background:#2ecc71;box-shadow:0 5px 0 0 #27ae60}.green:hover{background:#32db78}.green:active{box-shadow:0 2px 0 0 #27ae60}
