remove banner video

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,1 @@
-#intro{background-image:url(../img/banner-move-2.gif);height:100vh}@media (min-width:992px){#intro{margin-top:-58.59px}}.navbar .nav-link{color:#fff!important}.navbar{box-shadow:0 10px 20px 0 rgb(0 0 0 / 0%)!important}.mask{background-color:rgb(0 0 0 / 34%)}
+#intro{background-image:url(../img/banner.jpg);height:100vh}@media (min-width:992px){#intro{margin-top:-58.59px}}.navbar .nav-link{color:#fff!important}.navbar{box-shadow:0 10px 20px 0 rgb(0 0 0 / 0%)!important}.mask{background-color:rgb(0 0 0 / 34%)}
