--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,1 +1,40 @@
 @font-face{font-family:Rubik;src:url(../../assets/fonts/Rubik-Bold.ttf) format('truetype')}body{margin:40px 0;font-family:Rubik,sans-serif!important;font-size:14px;font-weight:500;background:#3f5efb;background:radial-gradient(circle,#3f5efb 0,#0200a2 100%);-webkit-font-smoothing:antialiased}.title{font-family:Rubik,sans-serif!important;font-size:24px;font-weight:700;color:#fff;text-align:center;letter-spacing:3px;font-variant:all-small-caps}p{line-height:1.5em;font-size:20px;color:#fff;font-weight:700}h1+p,p+p{margin-top:10px}.container{padding:40px 80px;display:flex;flex-wrap:wrap;justify-content:center}.card-wrap{margin:10px;transform:perspective(800px);transform-style:preserve-3d;cursor:pointer}.card-wrap:hover .card-info{transform:translateY(0)}.card-wrap:hover .card-info p{opacity:1}.card-wrap:hover .card-info,.card-wrap:hover .card-info p{transition:.6s cubic-bezier(.23,1,.32,1)}.card-wrap:hover .card-info:after{transition:5s cubic-bezier(.23,1,.32,1);opacity:1;transform:translateY(0)}.card-wrap:hover .card-bg{transition:.6s cubic-bezier(.23,1,.32,1),opacity 5s cubic-bezier(.23,1,.32,1);opacity:.8}.card-wrap:hover .card{transition:.6s cubic-bezier(.23,1,.32,1),box-shadow 2s cubic-bezier(.23,1,.32,1);box-shadow:rgba(255,255,255,.2) 0 0 40px 5px,#fff 0 0 0 1px,rgba(0,0,0,.66) 0 30px 60px 0,inset #333 0 0 0 5px,inset #fff 0 0 0 6px}.card{position:relative;flex:0 0 240px;width:240px;height:320px;background-color:#333;overflow:hidden;border-radius:10px;box-shadow:rgba(0,0,0,.66) 0 30px 60px 0,inset #333 0 0 0 5px,inset rgba(255,255,255,.5) 0 0 0 6px;transition:1s cubic-bezier(.445,.05,.55,.95)}.card-bg{opacity:.5;position:absolute;top:-20px;left:-20px;width:100%;height:100%;padding:20px;background-repeat:no-repeat;background-position:center;background-size:cover;transition:1s cubic-bezier(.445,.05,.55,.95),opacity 5s 1s cubic-bezier(.445,.05,.55,.95);pointer-events:none}.card-info{padding:20px;position:absolute;bottom:0;color:#fff;transform:translateY(40%);transition:.6s 1.6s cubic-bezier(.215,.61,.355,1)}.card-info p{opacity:0;text-shadow:#000 0 2px 3px;transition:.6s 1.6s cubic-bezier(.215,.61,.355,1)}.card-info *{position:relative;z-index:1}.card-info:after{content:"";position:absolute;top:0;left:0;z-index:0;width:100%;height:100%;background-image:linear-gradient(to bottom,transparent 0,rgba(0,0,0,.6) 100%);background-blend-mode:overlay;opacity:0;transform:translateY(100%);transition:5s 1s cubic-bezier(.445,.05,.55,.95)}.card-info h1{font-family:Rubik,sans-serif!important;font-size:36px;font-weight:700;text-shadow:rgba(0,0,0,.5) 0 10px 10px}
+/**button download app*/ 
+
+/* CSS */
+.button-9 {
+  appearance: button;
+  backface-visibility: hidden;
+  background-color: #405cf5;
+  border-radius: 6px;
+  border-width: 0;
+  box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset,rgba(50, 50, 93, .1) 0 2px 5px 0,rgba(0, 0, 0, .07) 0 1px 1px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  font-family: -apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Ubuntu,sans-serif;
+  font-size: 100%;
+  height: 44px;
+  line-height: 1.15;
+  margin: 12px 0 0;
+  outline: none;
+  overflow: hidden;
+  padding: 0 25px;
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  transform: translateZ(0);
+  transition: all .2s,box-shadow .08s ease-in;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 100%;
+}
+
+.button-9:disabled {
+  cursor: default;
+}
+
+.button-9:focus {
+  box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset, rgba(50, 50, 93, .2) 0 6px 15px 0, rgba(0, 0, 0, .1) 0 2px 2px 0, rgba(50, 151, 211, .3) 0 0 0 4px;
+}
